added version numbers

--- a/howomo.html
+++ b/howomo.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!---
+    version 1.0
+    initial release
+-->
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
