- this version adds the global now_showing_denomination and   now_showing_location variables. these are filled by different   functions within the JS
- the main effect is that when someone clicks on a house name, the
  location now appears in 'now showing'. this happens by adding a new
  argument to changeMapForNames, so that one argument is the house name
  (this queries the map) and the other argument is the location (which
  goes into now showing)

- also some minor housekeeping changes

--- a/howomo.html
+++ b/howomo.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!---
-    version 1.0
-    initial release
+    version 1.1
 -->
 <html>
 <head>
@@ -23,7 +22,7 @@
 <body onload="initializeMap(); showDenominations();">
     <h1 id="howomo-nowshowingheader">Now showing: <span id="howomo-nowshowing"></span></h1>
     <div id="howomo-datadisplay">
-        <p><a onclick="initializeMap();" href="#999">Reset map</a></p>
+        <p><a onclick="initializeMap();" href="#all">Reset map</a></p>
         <h1>Denominations</h1>
         <div id="howomo-listofdenominations"></div>
         <h1>Name</h1>
