--- a/howomo.html
+++ b/howomo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!---
-    version 1.1
+    version 1.0.3
 -->
 <html>
 <head>
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="howomo.js"></script>
 </head>
 <body onload="initializeMap(); showDenominations();">
+    <p><strong>Instructions</strong>: Click on a denomination name below to show houses of worship from only that denomination on the map and under the Names heading. Click on a house name to show only that house on the map. Click on any bubble on the map to show details for that house.</p>
     <h1 id="howomo-nowshowingheader">Now showing: <span id="howomo-nowshowing"></span></h1>
     <div id="howomo-datadisplay">
         <p><a onclick="initializeMap();" href="#all">Reset map</a></p>
@@ -30,6 +31,7 @@
     </div>
     <div id="howomo-map"></div>
     <div id="howomo-talk">
-        <p>The database used to create this map is publicly available. You can browse it <a href="http://www.google.com/fusiontables/DataSource?dsrcid=401562">at Google Fusion Tables</a>. You can also download the database as <a href="">an Excel file</a> or <a href="">a .csv file</a>.</p>
+        <p>Some houses of worship on this map are located outside mid-Missouri. Zoom out to see them.</p>
+        <p>The database used to create this map is publicly available. You can browse it <a href="http://www.google.com/fusiontables/DataSource?dsrcid=401562">at Google Fusion Tables</a>.</p>
 </body>
 </html>
