- changing name of mapslink id to howomo-mapslink

--- a/howomo.html
+++ b/howomo.html
@@ -22,7 +22,7 @@
 <body onload="initializeMap(); showDenominations();">
     <p><strong>Instructions</strong>: Click on a denomination name below to show houses of worship from only that denomination on the map and under the Names heading. Click on a house name to show only that house on the map. Click on any bubble on the map to show details for that house.</p>
     <h1 id="howomo-nowshowingheader">Now showing: <span id="howomo-nowshowing"></span></h1>
-    <span id="mapslink"></span>
+    <span id="howomo-mapslink"></span>
     <div id="howomo-datadisplay">
         <h1>Denominations</h1>
         <div id="howomo-listofdenominations"></div>
