- updated js file with tips from jslint - updated html file to reference min.js file

--- a/howomo.html
+++ b/howomo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!---
-    version 1.0.5
+    version 1.0.6
 -->
 <html>
 <head>
@@ -17,7 +17,7 @@
 <!-- Initialize --> 
 <script type="text/javascript"> google.load('visualization', '1', {}); </script>
 <!-- Import the actual HoWoMo code -->
-<script type="text/javascript" src="howomo.js"></script>
+<script type="text/javascript" src="howomo.min.js"></script>
 </head>
 <body onload="initializeMap(); showDenominations();">
     <p id="jscq">This page requires JavaScript.</p>
