Initial commit to GitHub

--- a/howomo.html
+++ b/howomo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!---
+<!--
     version 1.0.6
 -->
 <html>
@@ -17,7 +17,8 @@
 <!-- Initialize --> 
 <script type="text/javascript"> google.load('visualization', '1', {}); </script>
 <!-- Import the actual HoWoMo code -->
-<script type="text/javascript" src="howomo.min.js"></script>
+<!-- Linking to a minified version of the JS is recommended -->
+<script type="text/javascript" src="howomo.js"></script>
 </head>
 <body onload="initializeMap(); showDenominations();">
     <p id="jscq">This page requires JavaScript.</p>
