Add link to GitHub

--- a/howomo.html
+++ b/howomo.html
@@ -35,6 +35,6 @@
     <div id="howomo-talk">
         <p><a onclick="initializeMap();" href="#all">Reset map</a></p>
         <p>Some houses of worship on this map are located outside mid-Missouri. Zoom out to see them.</p>
-        <p>The database used to create this map is publicly available. You can browse it <a href="http://www.google.com/fusiontables/DataSource?dsrcid=401562">at Google Fusion Tables</a>.</p>
+        <p>The database used to create this map is publicly available. You can browse it <a href="http://www.google.com/fusiontables/DataSource?dsrcid=401562">at Google Fusion Tables</a>. Browse the source code <a href="https://github.com/dlh01/howomo">on GitHub</a>.</p>
 </body>
 </html>
