Fixed with new table after old one broke
- Also now tracking the min file

--- a/howomo.html
+++ b/howomo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-    version 1.0.6
+    version 1.3
 -->
 <html>
 <head>
@@ -18,7 +18,7 @@
 <script type="text/javascript"> google.load('visualization', '1', {}); </script>
 <!-- Import the actual HoWoMo code -->
 <!-- Linking to a minified version of the JS is recommended -->
-<script type="text/javascript" src="howomo.js"></script>
+<script type="text/javascript" src="howomo.min.js"></script>
 </head>
 <body onload="initializeMap(); showDenominations();">
     <p id="jscq">This page requires JavaScript.</p>
